--- a/exploreCensoring.Rmd
+++ b/exploreCensoring.Rmd
@@ -100,6 +100,24 @@ ggplot(overTime, aes(kb_release_year,prop))+geom_point()+geom_line()+ylab("censo
 
 Well that is striking.
 
+## Time Trends Per Category
+
+```{r,fig.height=12, fig.width=12}
+overTime = fullData %>% group_by(kb_release_year,category) %>% summarise(countCensored=sum(isCensored), count = sum(isPresent)) %>% mutate(prop = countCensored/count)
+
+
+ggplot(overTime, aes(kb_release_year,count))+geom_point()+geom_line()+facet_wrap(~category)+ylab("existence of words")
+
+ggplot(overTime, aes(kb_release_year,prop))+geom_point()+geom_line()+facet_wrap(~category)+ylab("censored / present")
+
+
+
+```
+
+Slight increase in existence of alcohol & drugs and profanity over time. 
+
+Censorship of alcohol and drugs, sexual groups increasing over time. 
+
 ## Kidz Bop 40 Gender
 
 ```{r}
