--- a/exploreCensoring.Rmd
+++ b/exploreCensoring.Rmd
@@ -14,77 +14,23 @@ library(dplyr)
 library(ggplot2)
 
 setwd("~/Desktop/kidz-bop-data/")
-badWordSummary = read.csv("data/censoring/censoringTimes.csv", stringsAsFactors = F)
-fullData = read.csv("data/censoring/fullDataSet.csv", stringsAsFactors = F)
+#badWordSummary = read.csv("data/censoring/censoringTimes.csv", stringsAsFactors = F)
+#fullData = read.csv("data/censoring/fullDataSet.csv", stringsAsFactors = F)
+fullData = read.csv("data/missing/fullCensor.csv", stringsAsFactors = F)
 
-load(file="data/2020-02-02/ogLyricsFullPlain.RData") ## ogLyricsFull
-load(file="data/2020-02-02/kbLyrics.RData") ## kbLyrics
+#load(file="data/2020-02-02/ogLyricsFullPlain.RData") ## ogLyricsFull
+#load(file="data/2020-02-02/kbLyrics.RData") ## kbLyrics
 
-kb40_gender <- read.csv("data/2020-02-02/originalArtists_gender-KB_40.csv", stringsAsFactors = F)
+#kb40_gender <- read.csv("data/2020-02-02/originalArtists_gender-KB_40.csv", stringsAsFactors = F)
 ```
 
 ## What is being censored by category?
 
 ```{r}
-fullData %>% group_by(category) %>% summarise(countCensored=sum(isCensored), count = sum(isPresent)) %>% mutate(prop = countCensored/count)
+fullData %>% group_by(category) %>% summarise(countCensored=sum(isCensored), count = sum(isPresent)) %>% mutate(prop = countCensored/count) %>% arrange(desc(prop))
 
 ```
 
-## Consistency of Censoring
-
-```{r}
-## took a while to censor
-badWordSummary$bad_word[which(badWordSummary$firstCensored>badWordSummary$firstAppear)]
-## confirms livin la vida loca
-
-## sometimes not censored
-badWordSummary$bad_word[which(badWordSummary$numPresent>badWordSummary$numCensored)]
-## some of these seem like they should always be censored
-
-## always censored
-badWordSummary$bad_word[which(badWordSummary$numPresent==badWordSummary$numCensored)]
-## women?
-```
-
-## Looking into consistency 
-
-```{r}
-fullData %>% filter(isPresent & bad_word =="nigga")
-
-#kbLyrics[[474]] %>% View()
-#kbLyrics[[536]] %>% View()
-
-fullData %>% filter(isPresent & bad_word =="dammit")
-
-```
-
-Kidz Bop words do have the word in it on Genius:
-
-https://genius.com/Kidz-bop-kids-suit-and-tie-lyrics
-
-https://genius.com/Kidz-bop-kids-u-dont-have-to-call-lyrics
-
-https://genius.com/Kidz-bop-kids-i-cry-lyrics
-
-```{r}
-fullData %>% filter(isPresent & bad_word =="women")
-
-#kbLyrics[[276]] %>% View()
-## intro with "women" not present, does keep god in though fyi
-
-#kbLyrics[[140]] %>% View()
-#ogLyricsFull[[133]] %>% View()
-## Women steady comin' after me	
-## Men steady comin' after you	
-
-## switched to girls and boys
-```
-
-Intro with "women" not present in "Jenny From the Block." Kidz Bop does keep "god" in though FYI.
-
-In Akon's song: "Women steady comin' after me," "Men steady comin' after you." Kidz Bop changes this to "girls" and "boys"
-
-So it looks like we have some false negatives, not sure what to do about that.
 
 ## Censoring over time
 
@@ -118,22 +64,3 @@ Slight increase in existence of alcohol & drugs and profanity over time.
 
 Censorship of alcohol and drugs, sexual groups increasing over time. 
 
-## Kidz Bop 40 Gender
-
-```{r}
-kb40 = fullData %>% filter(kb_release_year == max(fullData$kb_release_year)) 
-kb40_gender$song = tolower(kb40_gender$song)
-
-test = merge(kb40, kb40_gender, by.x="kb_song_name", by.y="song",all.y=T, all.x=F) 
-
-test %>% filter(!is.na(og_idx)) %>% group_by(gender) %>% summarise(countCensored = sum(isCensored), count = sum(isPresent))
-
-toP = test %>% filter(!is.na(og_idx)) %>% group_by(gender,category) %>% summarise(countCensored = sum(isCensored), count = sum(isPresent)) %>% mutate(prop = countCensored/count)
-
-
-ggplot(toP, aes(gender, prop))+geom_bar(stat = "identity") +facet_wrap(~category)
-
-
-```
-
-A little too sparse to see anything.
